--- a/src/app/connect/schema-editor/event-schema/event-schema.component.html
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.html
@@ -18,7 +18,7 @@
                         <button color="primary" mat-button (click)=guessSchema()>
                             <mat-icon matTooltip="Refresh Schema">refresh</mat-icon>
                         </button>
-                        <button color="primary" mat-button (click)=showPreview()>
+                        <button color="primary" mat-button (click)=togglePreview()>
                             <mat-icon matTooltip="Show preview of schema">play_arrow</mat-icon>
                         </button>
                     </div>
