Refactor property configuration and enable autocomplete

--- a/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
+++ b/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
@@ -1,14 +1,4 @@
-<div class="header" fxLayout="row" fxLayoutAlign="start center">
-    <div class="onhover" fxLayout="row" fxFlex="100">
-        <b>
-            {{getLabel()}}
-        </b>
-        <mat-icon *ngIf="property.isTimestampProperty()" style="font-size: 15px; padding: 4px;">access_time
-        </mat-icon>
-    </div>
-</div>
-<div class="divBorder" [hidden]=!open>
-
+<div class="divBorder">
     <mat-form-field class="doubleWidth">
         <mat-select placeholder="Runtime Type" [(ngModel)]="property.runtimeType"
             [disabled]="property.isTimestampProperty()">
@@ -37,15 +27,13 @@
     <div fxLayout="row" fxLayoutAlign="start" *ngIf="!property.isTimestampProperty()">
         <div class="form-group" fxFlexAlign="center" style="width: 155px">
             <mat-form-field *ngIf="!hadMesarumentUnit" class="example-full-width" style="width: 155px">
-                <input matInput placeholder="Unit" [formControl]="stateCtrl"
+                <input matInput placeholder="Unit" [matAutocomplete]="auto" [formControl]="stateCtrl"
                     [attr.disabled]="transformUnitEnable ? '' : null">
-                <!--
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
                     <mat-option *ngFor="let unit of filteredUnits | async" [value]="unit.label">
                         <span [matTooltip]="unit.label">{{unit.label}}</span>
                     </mat-option>
                 </mat-autocomplete>
-            -->
             </mat-form-field>
             <mat-form-field *ngIf="hadMesarumentUnit" class="example-full-width" style="width: 155px">
                 <input matInput placeholder="Unit" disabled [(ngModel)]="oldMeasurementUnitDipsplay">
@@ -94,23 +82,23 @@
                     <mat-option value="second" (click)="property.timestampTransformationMultiplier = 1000">Seconds
                     </mat-option>
                     <!-- More transformation Options, there is any use case for them?
-                    <mat-option value="minutes" (click)="property.timestampTransformationMultiplier = 60000">Minutes</mat-option>
-                    <mat-option value="hours"   (click)="property.timestampTransformationMultiplier = 3600000">Hours</mat-option>
-                    <mat-option value="days"    (click)="property.timestampTransformationMultiplier = 86400000">Days</mat-option>
-                    <mat-option value="custom" ><i>Custom</i></mat-option>
-                    -->
+                        <mat-option value="minutes" (click)="property.timestampTransformationMultiplier = 60000">Minutes</mat-option>
+                        <mat-option value="hours"   (click)="property.timestampTransformationMultiplier = 3600000">Hours</mat-option>
+                        <mat-option value="days"    (click)="property.timestampTransformationMultiplier = 86400000">Days</mat-option>
+                        <mat-option value="custom" ><i>Custom</i></mat-option>
+                        -->
                 </mat-select>
             </mat-form-field>
             <!-- To set custom time transformation multiplier -> If use: set multiplier to event
-            <mat-form-field class="aThirdWidth" *ngIf="selectedTimeMultiplier === 'custom' && property.timestampTransformationMode === 'timeUnit'">
-                <input matInput placeholder="Set multiplier" type="number">
-            </mat-form-field>
-            -->
+                <mat-form-field class="aThirdWidth" *ngIf="selectedTimeMultiplier === 'custom' && property.timestampTransformationMode === 'timeUnit'">
+                    <input matInput placeholder="Set multiplier" type="number">
+                </mat-form-field>
+                -->
         </div>
     </div>
 
     <mat-form-field *ngIf="staticValueAddedByUser()" class="doubleWidth">
-        <input matInput placeholder="Static Value" name="static_value" id="static_value"
+        <input matInput placeholder="Static Value" name="static_value" id="static_value" [matAutocomplete]="auto"
             [(ngModel)]="property.staticValue">
     </mat-form-field>
 
