--- a/src/app/connect/schema-editor/event-property-list/event-property-list.component.html
+++ b/src/app/connect/schema-editor/event-property-list/event-property-list.component.html
@@ -1,12 +1,4 @@
-<div class="header" fxLayout="row" fxLayoutAlign="start center">
-    <div class="onhover" fxFlex="100" fxLayout="row">
-        <b>
-            {{getLabel()}}
-        </b>
-        <p style="margin: 0px 10px 10px;">[List]</p>
-    </div>
-</div>
-<div class="body" [hidden]=!open>
+<div class="body">
     <mat-form-field class="doubleWidth">
         <mat-select placeholder="Runtime Type" [(ngModel)]="property.eventProperty.runtimeType">
             <mat-option *ngFor="let dataType of runtimeDataTypes" [value]="dataType.url">
@@ -15,4 +7,3 @@
         </mat-select>
     </mat-form-field>
 </div>
-<!-- (save)=saveThisProperty($event) nach Angular 5 update -->
