--- a/src/app/connect/schema-editor/event-schema/event-schema.component.css
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.css
@@ -68,7 +68,7 @@ ul {
   z-index: 1000;
 }
 :host /deep/ .node-drop-slot.is-dragging-over {
-  background-color: green;
+  background-color: rgb(27, 20, 100);
   border: none;
 }
 :host /deep/ .tree-node-expanded {
@@ -151,3 +151,14 @@ pointer-events: none !important;
 opacity:0.5;
 }
 
+.add-schema button {
+  color: white;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+  background-color: rgb(27, 20, 100) !important;
+}
+
+::ng-deep .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
+  background-color: rgb(27, 20, 100) !important;
+}
