--- a/src/app/connect/schema-editor/event-schema/event-schema.component.html
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.html
@@ -2,7 +2,7 @@
     <div fxFlex="0 1 80%">
         <div class="assemblyOptions sp-blue-bg">
             <div fxLayout="row">
-                <div fxLayoutAlign="space-between center" class="addSchema" fxFlex="0 1 100%">
+                <div fxLayoutAlign="space-between center" class="add-schema" fxFlex="0 1 100%">
                     <div>
                         <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
                             <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
@@ -68,34 +68,26 @@
                 <tree-root #tree [nodes]="nodes" [options]="options" (updateData)="onUpdateData(tree)">
                     <ng-template #treeNodeTemplate let-node let-index="index">
                         <div fxLayout="row">
-                            <div fxFlex="1 1 auto">
-                                <div class="schema" *ngIf="isEventPropertyNested(node.data)">
-                                    <app-event-property-nested [index]="i + 1" [eventPropertyNested]="node.data"
-                                        [domainPropertyGuess]="getDomainProbability(node.data.runTimeName)"
-                                        [domainPropertyGuesses]="domainPropertyGuesses" [isEditable]="isEditable"
-                                        (addNestedProperty)="addNestedProperty(node.data)"
-                                        (delete)=deletePropertyNested($event)>
-                                    </app-event-property-nested>
-                                </div>
-                                <div *ngIf="isEventPropertyPrimitive(node.data)">
-                                    <app-event-property-primitive (delete)=deletePropertyPrimitive($event)
-                                        (addPrimitive)="addStaticValueProperty($event)"
-                                        [domainPropertyGuess]="getDomainProbability(node.data.runTimeName)"
-                                        [isEditable]="isEditable" [property]="node.data">
-                                    </app-event-property-primitive>
-                                </div>
-                                <div *ngIf="isEventPropertyList(node.data)">
-                                    <app-event-property-list (delete)=deletePropertyList($event)
-                                        [isEditable]="isEditable" [property]="node.data">
-                                    </app-event-property-list>
-                                </div>
+                            <div fxFlex="1 1 auto" fxLayout="row">
+                                <b>
+                                    {{ getLabel(node.data) }}
+                                </b>
+                                <p style="margin: 0px 10px 10px;" *ngIf="isEventPropertyList(node.data)">[List]</p>
                             </div>
+                            <!--
                             <div fxFlex="15" *ngIf="isEventPropertyPrimitive(node.data)">
                                 <mat-select [(value)]="node.data.propertyScope">
                                     <mat-option value="MEASUREMENT_PROPERTY">Measurement</mat-option>
                                     <mat-option value="DIMENSION_PROPERTY">Dimension</mat-option>
                                     <mat-option value="HEADER_PROPERTY">Header</mat-option>
                                 </mat-select>
+                            </div>
+                        -->
+                            <div fxFlex="0 1 auto" fxLayoutAlign="center center"
+                                *ngIf="isEventPropertyNested(node.data) || isEventPropertyPrimitive(node.data) || isEventPropertyList(node.data)">
+                                <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
+                                    <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
+                                </button>
                             </div>
                             <div fxFlex="0 1 auto" fxLayoutAlign="center center"
                                 *ngIf="isEventPropertyNested(node.data) || isEventPropertyPrimitive(node.data) || isEventPropertyList(node.data)">
