Fix minor issues

--- a/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
+++ b/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
@@ -31,7 +31,7 @@
                     [attr.disabled]="transformUnitEnable ? '' : null">
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
                     <mat-option *ngFor="let unit of filteredUnits | async" [value]="unit.label">
-                        <span [matTooltip]="unit.label">{{unit.label}}</span>
+                        {{unit.label}}
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
@@ -40,13 +40,13 @@
             </mat-form-field>
 
         </div>
-        <button mat-button [disabled]="!isEditable" (click)="transformUnit()" color="primary" class="form-group"
-            fxFlexAlign="center" style="min-width: 60px; max-width: 60px">
+        <button mat-button (click)="transformUnit()" color="primary" class="form-group" fxFlexAlign="center"
+            style="min-width: 60px; max-width: 60px">
             <mat-icon *ngIf="!transformUnitEnable">arrow_forward</mat-icon>
             <mat-icon *ngIf="transformUnitEnable" style="transform: rotate(180deg)">arrow_forward</mat-icon>
         </button>
         <mat-form-field class="example-full-width" style="width: 155px" *ngIf="transformUnitEnable">
-            <mat-select [disabled]="!isEditable" placeholder="New Unit" [(value)]="selectUnit">
+            <mat-select placeholder="New Unit" [(value)]="selectUnit">
                 <mat-option *ngFor="let unit of possibleUnitTransformations" [value]="unit"
                     (click)="changeTargetUnit(unit)">
                     {{unit.label}}
