Close streampipes/ce#237: Add feedback form

--- a/src/scss/sp/buttons.ng1.scss
+++ b/src/scss/sp/buttons.ng1.scss
@@ -26,6 +26,10 @@
   background: $sp-color-primary-light !important;
 }
 
+.sp-icon-button-no-hover:hover {
+
+}
+
 .sp-button {
   display: inline-block ;
   vertical-align: middle;
