--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import './sp/animations.ng1';
 @import './sp/mat-tab';
 @import './sp/dialog.ng5';
+@import './sp/feedback.ng1';
 
 @import './sp/input.ng1';
 @import './sp/documentation.ng1';
