--- a/src/app/editor/components/pipeline/pipeline.tmpl.html
+++ b/src/app/editor/components/pipeline/pipeline.tmpl.html
@@ -16,6 +16,7 @@
         </span>
          <pipeline-element-options ng-if="!ctrl.preview" delete-function="ctrl.handleDeleteOption"
                                    current-mouse-over-element="ctrl.currentMouseOverElement"
+                                   pipeline-valid="ctrl.pipelineValid"
                                    all-elements="ctrl.allElements"
                                    pipeline-element="pipelineElement"
                                    raw-pipeline-model="ctrl.rawPipelineModel"
